# onixpy

./: .codecov.yml  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: action.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/instructions/onix/: header.instructions.md  product.instructions.md
.github/instructions/onix/b1/: p3.md
.github/workflows/: cd.yml  ci.yml
scripts/: generate_codelist.py  pyproject.toml
src/onix/: __init__.py  _base.py  message.py
src/onix/header/: header.py
src/onix/lists/: __init__.py  list141.py  list142.py  list3.py  list44.py  list58.py  list74.py  list96.py  models.py
src/onix/parsers/: __init__.py  fields.py  json.py  rng_validator.py  tags.py  xml.py
src/onix/product/: __init__.py  base.py  contributor.py  descriptive_detail.py  product.py  publishing_detail.py  related_material.py
src/onix/product/b1/: __init__.py  p11.py
src/onix/product/b1/p1/: RecordSourceIdentifier.py  __init__.py
src/onix/product/b1/p2/: Barcode.py  ProductIdentifier.py  __init__.py
src/onix/product/b1/p3/: DescriptiveDetail.py  EpubLicense.py  EpubLicenseDate.py  EpubLicenseExpression.py  EpubUsageConstraint.py  EpubUsageLimit.py  ProductClassification.py  ProductFormFeature.py  __init__.py
src/onix/validation/: rng.py
tests/: __init__.py  conftest.py  test_edge_cases.py  test_header_validation.py  test_lists.py  test_message.py  test_parsers.py  test_parsers_fields_tags_extra.py  test_parsers_json_extra.py  test_parsers_utilities.py  test_parsers_xml_extra.py  test_product_b1_p3.py  test_product_b1_p3_extra.py  test_product_b1_p3_more.py  test_product_b1_p6_p7.py  test_rng_validation.py  test_rng_validation_short_names.py  test_rng_validator_extra.py  test_roundtrip_permutations.py
tests/core/: __init__.py  test_alias_keys.py  test_base_model.py  test_code_lists.py  test_edge_cases.py  test_header.py  test_message.py  test_roundtrip.py
tests/parsers/: __init__.py  test_fields_and_tags.py  test_json.py  test_parser_edge_cases.py  test_parsers.py  test_utilities.py  test_xml.py
tests/product/p1/: __init__.py  test_p1.py
tests/product/p2/: __init__.py  test_p2.py
tests/product/p3/: test_p3.py
tests/product_b1/: __init__.py
tests/product_b1/p3/: __init__.py  test_models.py
tests/product_b1/p6_p7/: __init__.py  test_models.py
tests/rng/: ONIX_BookProduct_CodeLists.rng
tests/validation/: __init__.py  test_validation.py  test_validator.py
