[project]
name = "onix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hodei Navarro", email = "hodei.navarro@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",                    # Verbose
    "--strict-markers",      # Strict marker usage
    "--tb=short",           # Shorter traceback format
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
