[project]
name = "onix-scripts"
version = "0.1.0"
description = "Scripts for generating ONIX code lists and other utilities"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "ruff>=0.4.0",
]

[tool.uv]
# This is a script-only project, no build needed
